# plant-store

./: .gitignore  Cargo.toml
.cargo/: config.toml
assets/stylesheets/: global.css
bindings/: AddToCart.ts  ApiError.ts  Cart.ts  CartItem.ts  Credentials.ts  ErrorCause.ts  ListingResponse.ts  LoginResponse.ts  LoginStatus.ts  Product.ts  Signup.ts  User.ts  UserError.ts
htmx-frontend/: Cargo.toml
htmx-frontend/src/: api.rs  components.rs  main.rs  pages.rs  utils.rs
htmx-frontend/src/api/: account.rs  cart.rs  store.rs
htmx-frontend/src/components/: icons.rs  navbar.rs  notification.rs  page_wrapper.rs  text_field.rs
htmx-frontend/src/pages/: account.rs  checkout.rs  shopping.rs  store.rs
store-lib/: Cargo.toml
store-lib/src/: account.rs  cart.rs  lib.rs  store.rs
